fix(product): fix create product method
