# services/product/src/handler/Product/create.ts
@@ -1,86 +1,108 @@
-import { Product_type } from "@prisma/client";
-import { CreateAllergen } from "@product/handler/Allergen/create";
-import { ReadAllergen } from "@product/handler/Allergen/read";
-import { log } from "@product/lib/log";
-import { Data } from "@product/types";
-import { Allergen } from "@product/types/Allergen";
-import { Category } from "@product/types/Category";
-import { Product } from "@product/types/Product";
+import {Product_type} from "@prisma/client";
+import {CreateAllergen} from "@product/handler/Allergen/create";
+import {ReadAllergen} from "@product/handler/Allergen/read";
+import {log} from "@product/lib/log";
+import {Data} from "@product/types";
+import {Product} from "@product/types/Product";
 import prisma from "@product/lib/prisma";
-import { ServerErrorResponse } from "@grpc/grpc-js";
+import {ServerErrorResponse} from "@grpc/grpc-js";
 import {ReadCategory} from "@product/handler/Category/read";
 import {CreateCategory} from "@product/handler/Category/create";
 
 export const CreateProduct = async (
-	{ request }: Data<Product>,
-	callback: (err: ServerErrorResponse | null, response: Product | null) => void
+    {request}: Data<Product>,
+    callback: (err: ServerErrorResponse | null, response: Product | null) => void
 ) => {
-	try {
-		const { name, image, comment, price, preparation, weight, kilocalories, nutriscore, restaurant_id, type, categories, allergens } = request;
+    try {
+        const {
+            name,
+            image,
+            comment,
+            price,
+            preparation,
+            weight,
+            kilocalories,
+            nutriscore,
+            restaurant_id,
+            type,
+            categories,
+            allergens
+        } = request;
+        const allergenIds: { id: string }[] = [];
+        const categoryIds: { id: string }[] = [];
+        allergens.map(async allergen => {
+            if (allergen.id != "" && allergen.id != null) {
+                await ReadAllergen({request: {id: allergen.id}},
+                    (err, response) => {
+                        if (err) {
+                            log.error(err);
+                            throw err;
+                        } else {
+                            if (response) allergenIds.push({id: response.id});
+                        }
+                    });
+            } else {
+                await CreateAllergen({request: allergen},
+                    (err, response) => {
+                        if (err) {
+                            log.error(err);
+                            throw err;
+                        } else {
+                            if (response)  allergenIds.push({id: response.id});
+                        }
+                    });
+            }
+        });
 
-		const handleMapRequest = (err: any, response: Allergen | Category | null) => {
-			if (err) {
-				log.error(err);
-			} else {
-				return response;
-			}
-		};
+        categories.map(async category => {
+            if (category.id != "" && category.id != null) {
+                await ReadCategory({request: {id: category.id}},
+                    (err, response) => {
+                        if (err) {
+                            log.error(err);
+                            throw err;
+                        } else {
+                            if (response) categoryIds.push({id: response.id});
+                        }
+                    });
+            } else {
+                await CreateCategory({request: category},
+                    (err, response) => {
+                        if (err) {
+                            log.error(err);
+                            throw err;
+                        } else {
+                           if (response) categoryIds.push({id: response.id});
+                        }
+                    });
+            }
+        });
 
-		allergens.map(async allergen => {
-			if(allergen.id != "" && allergen.id != null)
-				await ReadAllergen({
-					request: {id: allergen.id}
-				}, () =>{
-					CreateAllergen({
-						request: allergen
-					}, handleMapRequest)
-				});
-			else
-				await CreateAllergen({
-					request: allergen
-				}, handleMapRequest);
-		});
+        const product = await prisma.product.create({
+            data: {
+                name,
+                image,
+                comment,
+                price,
+                preparation,
+                weight,
+                kilocalories,
+                nutriscore,
+                restaurant_id,
+                type: type as unknown as Product_type,
+                categories: {
+                    connect: categoryIds
+                },
+                allergens: {
+                    connect: allergenIds
+                }
+            },
+        }) as unknown as Product;
 
-		categories.map(async category => {
-			if(category.id != "" && category.id != null)
-				await ReadCategory({
-					request: {id: category.id}
-				}, () =>{
-					CreateCategory({
-						request: category
-					}, handleMapRequest)
-				});
-			else
-				await CreateCategory({
-					request: category
-				}, handleMapRequest);
-		});
-
-		const product = await prisma.product.create({
-			data: {
-				name,
-				image, 
-				comment, 
-				price, 
-				preparation, 
-				weight, 
-				kilocalories, 
-				nutriscore, 
-				restaurant_id, 
-				type: type as unknown as Product_type,
-				categories: {
-					connect: categories
-				}, 
-				allergens: {
-					connect: allergens
-				}
-			},
-		}) as unknown as Product;
-
-		callback(null, product);
-	} catch (error: ServerErrorResponse | any) {
-		log.error(error);
-		callback(error, null);
-	}
+        callback(null, product);
+    } catch (error: ServerErrorResponse | any) {
+        log.error(error);
+        callback(error, null);
+    }
 };
 
